# ledger-fio

./: .gitignore  Makefile  MakefileContainer.mk  MakefileJS.mk  MakefileLocal.mk  MakefileLocal_old.mk  MakefilePhysicalDevice.mk  MakefileSpeculos.mk  MakefileTest.mk  README.md  TODO  null.d
.github/workflows/: ci-workflow.yml  guidelines_enforcer.yml  lint-workflow.yml
doc/: allowed_command_sequences.md  design_doc.md  ins_decode.md  ins_decrypt.md  ins_get_public_key.md  ins_sign_tx.md  ins_sign_tx_commands.md
doc/security/: security_doc.md  security_sign.md
fuzzing/: .gitignore  CMakeLists.txt  crash-697c3622b79ac32872c0746c7622d76a82166f1b  fuzz_fio.c  os_mocks.c
fuzzing/corpus/: decode_1  decode_2  decode_3  get_pubkey  sign_1  sign_10  sign_2  sign_3  sign_4  sign_5  sign_6  sign_7  sign_8  sign_9
ledger-app-fio/: Makefile  README.md
ledger-app-fio/doc/: design_doc.md  ins_get_public_key.md  ins_get_public_keys.md  ins_sign_tx.md
ledger-app-fio/src/: base58.h  bech32.h  bip44.c  bip44.h  bip44_test.c  bufView.h  cbor.h  crc32.h  eos_utils.c  eos_utils.h  errors.h  fio.c  fio.h  getPublicKey.c  getPublicKey.h  getPublicKeys.c  getPublicKeys.h  getSerial.h  getVersion.c  getVersion.h  handlers.c  handlers.h  hash.h  hexUtils.c  hexUtils.h  io.h  keyDerivation.c  keyDerivation.h  keyDerivation_test.c  main.c  menu.h  runTests.c  securityPolicy.c  securityPolicy.h  signTransaction.c  signTransaction.h  state.h  testUtils.h  textUtils.c  textUtils.h  (+7 more)
ledgerjs-fio/: package.json
ledgerjs-fio/src/interactions/transactionTemplates/: commands.ts  template_addnft.ts  template_remnft.ts
src/: app_main.c  assert.c  assert.h  bip44.c  bip44.h  bip44_test.c  decodeDH.c  decodeDH.h  diffieHellman.c  diffieHellman.h  diffieHellmann_test.c  diffieHelmann_test.c  endian.h  eos_utils.c  eos_utils.h  errors.h  fio.c  fio.h  getPublicKey.c  getPublicKey.h  getSerial.c  getSerial.h  getVersion.c  getVersion.h  handlers.c  handlers.h  hash.h  hexUtils.c  hexUtils.h  io.c  io.h  io2.c  keyDerivation.c  keyDerivation.h  keyDerivation_test.c  main.c  menu.h  menu_nanos.c  menu_nanox.c  runTests.c  (+26 more)
test-integration/: decodeMessage.js  getPublicKey.js  getSerial.js  getVersion.js  package.json  runUnitTests.js  signTransactionAddaddress.js  signTransactionAddnft.js  signTransactionBasic.js  signTransactionBasicDH.js  signTransactionCommandsBasic.js  signTransactionCommandsCountedSection.js  signTransactionCommandsDH.js  signTransactionCommandsDHAndCountedSections.js  signTransactionCommandsShowData.js  signTransactionCommandsStorage.js  signTransactionNewfundsreq.js  signTransactionOtherEosio.js  signTransactionOtherFioAddress.js  signTransactionOtherFioOracle.js  signTransactionOtherFioReqobt.js  signTransactionOtherFioStaking.js  signTransactionRecordobt.js  signTransactionRemaddress.js  signTransactionRemnft.js  signTransactionTrnsfiopubky.js  speculos-buttons-and-snapshots.js  speculos-common.js  speculos-transport.js
